--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.25.2</version>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>13.0</version>
+          <scope>compile</scope>
+      </dependency>
 
   </dependencies>
 
